# python_8080

./: .gitignore  README.md  opcode_tests.ipynb  pyproject.toml  setup.py  test.ipynb
src/i8080/: _i8080.c  _i8080.h  _i8080_class.cpp  _i8080_class.hpp  _i8080_constants.c  _i8080_constants.cpp  _i8080_constants.h  _i8080_constants.hpp  _i8080_cpu.c  _i8080_cpu.h  _i8080_memory.c  _i8080_memory.h  _i8080_module.c  _i8080_module.cpp  _i8080_module.h  _i8080_module.hpp  _i8080_object.c  _i8080_object.cpp  _i8080_object.h  _i8080_object.hpp  structmember.h
